--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,17 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/style.css">
 
+        <!-- MathJax -->
+        <script type="text/javascript"
+                src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+        </script>
+        <script type="text/x-mathjax-config">
+            MathJax.Hub.Config({
+                tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+            });
+        </script>
+
+        <!-- My own script -->
         <script type="text/javascript" src="/js/phgscript.js"></script>
     </head>
     <body>
