--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
             });
         </script>
 
+        <!-- jQuery -->
+        <script type="text/javascript" src="/lib/jquery-1.10.2.min.js"></script>
+
         <!-- My own script -->
         <script type="text/javascript" src="/js/phgscript.js"></script>
     </head>
