--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,28 @@ footer {
     margin-left: 2em;
 }
 
+/*
+ *
+ * Under construction
+ *
+ */
+#ucbox{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 320px;
+    width: 320px;
+    margin-left: -160px;
+    margin-top: -160px;
+}
+
+.ucimage{
+    width: 320px;
+    height: 320px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 32px rgba(250, 250, 250, 0.75);
+}
+
 /*****************************************************************************/
 /*
 /* Projects
