--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,11 @@ footer {
     box-shadow: 0px 0px 32px rgba(250, 250, 250, 0.75);
 }
 
+td {
+    font-size: 12px;
+    text-align: center;
+}
+
 /*****************************************************************************/
 /*
 /* Projects
