--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,37 @@ layout: default
 ---
 
 <div class="content">
+    <p>
+        {% if page.previous %}
+        <a class="prevpost" href="{{ page.previous.url }}">Previous Post</a>
+        {% endif %}
+        {% if page.next %}
+        <a class="nextpost" href="{{ page.next.url }}">Next Post</a>
+        {% endif %}
+    </p><br><br>
     <h2>{{ page.title }}</h2>
     <p class="meta">{{ page.date | date_to_string }}</p>
     <div class="post">
         {{ content }}
+    </div>
+    <p>
+        {% if page.previous %}
+        <a class="prevpost" href="{{ page.previous.url }}">Previous Post</a>
+        {% endif %}
+        {% if page.next %}
+        <a class="nextpost" href="{{ page.next.url }}">Next Post</a>
+        {% endif %}
+    </p><br><br>
+    <div>
+        <h3>Related Posts</h3>
+        <div class="relatedposts">
+            {% for post in site.related_posts %}
+            <li>
+                <a href="{{ post.url }}">
+                    {{ post.title }}
+                </a>
+            </li>
+            {% endfor %}
+        </div>
     </div>
 </div>
