--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
             ga('create', 'UA-51049436-1', 'phg1024.github.io');
+            ga('require', 'displayfeatures');
             ga('send', 'pageview');
 
         </script>
@@ -59,7 +60,7 @@
           {{ content }}
 
           <footer>
-          &copy 2009-2013 &nbsp Peihong Guo &nbsp 
+          &copy 2009-2014 &nbsp Peihong Guo &nbsp
    	    <script type="text/javascript">
    		    writeEmailAddress();
            </script>
