--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,14 +16,21 @@ layout: default
     <div class="post">
         {{ content }}
     </div>
-    <p>
-        {% if page.previous %}
-        <a class="prevpost" href="{{ page.previous.url }}">Previous Post</a>
-        {% endif %}
-        {% if page.next %}
-        <a class="nextpost" href="{{ page.next.url }}">Next Post</a>
-        {% endif %}
-    </p><br><br>
+    <div class="plugins">
+    <div class="social">
+        <span class="twitter">
+            <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{site.url}}{{page.url}}">Tweet</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        </span>
+        <span class="google">
+            <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+            <g:plusone size="medium" href="{{site.url}}{{page.url}}"></g:plusone>
+        </span>
+        <span class="Facebook">
+            <iframe src="https://www.facebook.com/plugins/like.php?href={{site.url}}{{page.url}}&amp;show_faces=false&amp;layout=button_count" scrolling="no" frameborder="0" style="height: 21px; width: 100px" allowTransparency="true"></iframe>
+        </span>
+    </div>
+    <!-- DisQus support -->
     <div>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
@@ -40,6 +47,15 @@ layout: default
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
     </div>
+    </div>
+    <p>
+        {% if page.previous %}
+        <a class="prevpost" href="{{ page.previous.url }}">Previous Post</a>
+        {% endif %}
+        {% if page.next %}
+        <a class="nextpost" href="{{ page.next.url }}">Next Post</a>
+        {% endif %}
+    </p><br><br>
     <div>
         <h3>Related Posts</h3>
         <div class="relatedposts">
