--- a/css/style.css
+++ b/css/style.css
@@ -256,3 +256,31 @@ td {
     height: 32px;
     float: left;
 }
+
+.plugins {
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+/* This gets Google to fall into place */
+.social {
+    font-size: 1px;
+}
+
+/* This gets Facebook to fall into place */
+.social iframe {
+    vertical-align: middle;
+}
+
+/* Set an optional width for your button wrappers */
+.social span {
+    display: inline-block;
+    width: 110px;
+}
+
+/* Adjust the widths individually if you like */
+.social .google {
+    width: 75px;
+}
