--- a/projects/projects.css
+++ b/projects/projects.css
@@ -4,7 +4,7 @@
         opacity: 0;
     }
 
-    div.upload, button, select{
+    div.upload, button{
         display: inline-block;
         cursor:pointer; /*forces the cursor to change to a hand when the button is hovered*/
         padding:5px 10px; /*add some padding to the inside of the button*/
@@ -31,6 +31,4 @@
         box-shadow: 0 0 1px rgba(0,0,0, .75);
     }
 
-    select {
-        -webkit-appearance: none;
-    }
+
